--- a/web/package.json
+++ b/web/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
     "next": "14.0.3",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18"
   },
   "devDependencies": {
