--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,40 +1,36 @@
-# Dependency directories
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Next.js build artifacts
-.next/
-
-# Local environment files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Log files
-*.log
-
-# Editor directories and files
-.vscode/
-.idea/
-*.suo
-*.ntvs*
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# Yarn
-yarn-error.log
-.pnp/
+# dependencies
+/node_modules
+/.pnp
 .pnp.js
-.cache/
+.yarn/install-state.gz
 
-# Jest coverage
-coverage/
+# testing
+/coverage
 
-# Mac
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
+*.pem
 
-# Windows
-Thumbs.db
-Desktop.ini
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
