--- a/backend/todo-app/package.json
+++ b/backend/todo-app/package.json
@@ -2,10 +2,25 @@
   "name": "todo-app",
   "version": "0.1.0",
   "description": "a todo backend app",
-  "main": "index.js",
+  "main": "src/app.ts",
   "scripts": {
+    "start": "ts-node src/app.ts ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Maxime Tchagou",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "eslint": "^8.55.0",
+    "eslint-config-standard-with-typescript": "^40.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "typescript": "^5.3.3"
+  }
 }
